...
                                    <subviews>
                                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iY5-EM-gwy" customClass="CheckBox" customModule="CheckBox">
                                            <rect key="frame" x="274" y="-5" width="92" height="51"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="title" value="check"/>
                                                <userDefinedRuntimeAttribute type="color" keyPath="titleColor">
                                                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                    <real key="value" value="2"/>
                                                </userDefinedRuntimeAttribute>
...
                        <connections>
                            <outlet property="dataSource" destination="xIC-un-4KI" id="FIS-FW-NbP"/>
                            <outlet property="delegate" destination="xIC-un-4KI" id="LBe-dd-dfc"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Easy Reminder" id="Kyz-Bf-WbS">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="wUd-ZX-yDH">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="JKJ-3b-I58">
                                <rect key="frame" x="16" y="7" width="51" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Filter"/>
                                <connections>
...
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="plain" id="AU1-Fd-n9O">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="RrL-ZG-3Gb">
                                <rect key="frame" x="329" y="0.0" width="30" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Add"/>
                                <connections>
                                    <segue destination="54z-o7-j1j" kind="show" identifier="addNewReminder" id="r9l-qs-rI4"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
...
                                </connections>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ap-DF-gAB">
                                <rect key="frame" x="16" y="526" width="343" height="30"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="save" destination="qOg-pz-spO" eventType="touchUpInside" id="8KS-pf-gFC"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Kj-aM-Ib8">
                                <rect key="frame" x="132" y="128" width="224" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
