//
//  Accessibility.swift
//  EasyReminderTDD
//
//  Created by Егор Зайцев on 27.12.2022.
//  Copyright © 2022 Mariya. All rights reserved.
//

import Foundation

public enum Accessibility {
    public enum EasyReminderScreen {
           public static let filterButton = "filter"
       }
}
