...
        let testReminder1 = NSEntityDescription.insertNewObject(forEntityName: "Reminder", into: context) as! Reminder
        let testReminder2 = NSEntityDescription.insertNewObject(forEntityName: "Reminder", into: context) as! Reminder
         let testReminder3 = NSEntityDescription.insertNewObject(forEntityName: "Reminder", into: context) as! Reminder

        dateFormatter.dateFormat = "MM-dd-yyyy"
    
        testReminder1.setValue("title one", forKey: "title")
        testReminder1.setValue(3, forKey: "precedence")
        testReminder1.setValue("Voronezh", forKey: "location")
        testReminder1.setValue("Description1", forKey: "descrip")
        testReminder1.setValue(dateFormatter.date(from: "11-10-2018"), forKey: "date")
        testReminder1.setValue(0, forKey: "done")
        
...
